<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_main_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_main_1" />

        <Button
            android:id="@+id/button_main_2"
            android:text="@string/button_main_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_main_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_main_3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>